--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
         <div class="footer-canvas">
 
             <div class="footer-main">
-                <h2 class="footer-logo">Devify</h2>
+                <h2 class="footer-logo">Devify by Tarunya Kesharwani</h2>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam laborum temporibus cum, sed dolor
                     sint excepturi id saepe cupiditate aut, ab nemo facilis vel, eligendi fugit a perspiciatis nobis!
